``` feat(i18n): add comprehensive translations for companies, articles, and nomenclatures modules
Add translation keys for company form states (loading, saving, error_loading), titles (edit_title, create_title), success messages, detail view fields, status labels, address/contact management, sections, actions, empty states, and field labels. Add complete translation sets for articles and nomenclatures modules including list views, forms, filters, columns, BOM management, and CRUD operation messages

--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -83,7 +83,88 @@
       "website_hint": "https://company.com",
       "company_type": "Company Type",
       "country": "Country",
-      "is_active": "Active"
+      "is_active": "Active",
+      "loading": "Loading form...",
+      "saving": "Saving...",
+      "error_loading": "Error loading form data: {error}",
+      "edit_title": "Edit Company",
+      "create_title": "Create Company",
+      "location": "Location",
+      "updated_success": "Company '{name}' updated successfully",
+      "created_success": "Company '{name}' created successfully"
+    },
+    "detail": {
+      "legal_name": "Legal Name",
+      "trigram": "Trigram",
+      "status": "Status",
+      "phone": "Phone",
+      "website": "Website",
+      "country": "Country",
+      "city": "City",
+      "main_address": "Main Address",
+      "intracommunity_number": "Intracommunity Number"
+    },
+    "status": {
+      "active": "Active",
+      "inactive": "Inactive"
+    },
+    "address": {
+      "add": "Add Address",
+      "edit": "Edit Address",
+      "required_fields": "Please complete the required fields"
+    },
+    "contact": {
+      "add": "Add Contact",
+      "edit": "Edit Contact",
+      "first_name": "First Name",
+      "last_name": "Last Name",
+      "phone": "Phone",
+      "mobile": "Mobile",
+      "position": "Position",
+      "required_fields": "Please complete the required fields"
+    },
+    "messages": {
+      "unknown_error": "Unknown error",
+      "loading": "Loading company...",
+      "error_loading": "Error loading company: {error}",
+      "delete_title": "Delete Company",
+      "delete_confirm": "Are you sure you want to delete the company '{name}'?",
+      "address_deleted": "Address deleted successfully",
+      "contact_deleted": "Contact deleted successfully"
+    },
+    "address_types": {
+      "delivery": "Delivery",
+      "billing": "Billing",
+      "headquarters": "Headquarters",
+      "branch": "Branch"
+    },
+    "sections": {
+      "general_info": "General Information",
+      "contact_info": "Contact Information",
+      "location": "Location",
+      "fiscal_info": "Fiscal Information",
+      "addresses": "Addresses",
+      "contacts": "Contacts"
+    },
+    "actions": {
+      "edit_company": "Edit company",
+      "delete_company": "Delete company",
+      "edit_address": "Edit address",
+      "delete_address": "Delete address",
+      "edit_contact": "Edit contact",
+      "delete_contact": "Delete contact",
+      "add_first_address": "Add First Address",
+      "add_first_contact": "Add First Contact"
+    },
+    "empty_states": {
+      "no_addresses": "No addresses registered",
+      "no_contacts": "No contacts registered"
+    },
+    "labels": {
+      "address": "Address",
+      "postal_code": "Postal Code",
+      "main_address": "Main address",
+      "primary": "Primary"
     }
   },
   "clients": {
@@ -115,6 +196,170 @@
     "no_suppliers_message": "Start by creating your first supplier",
     "create_first": "Create First Supplier",
     "search_placeholder": "Search suppliers by name, trigram..."
+  },
+  "articles": {
+    "title": "Articles",
+    "description": "Article management",
+    "list_title": "Article List",
+    "create": "Create Article",
+    "create_new": "New Article",
+    "create_title": "Create Article",
+    "edit": "Edit Article",
+    "edit_title": "Edit Article",
+    "delete": "Delete Article",
+    "view": "View Article",
+    "detail": "Article Details",
+    "no_articles": "No articles registered",
+    "no_articles_message": "Start by creating your first article",
+    "create_first": "Create First Article",
+    "search_placeholder": "Search articles by code, name...",
+    "columns": {
+      "id": "ID",
+      "code": "Code",
+      "name": "Name",
+      "unit": "Unit",
+      "cost": "Cost",
+      "description": "Description",
+      "status": "Status",
+      "created_at": "Created At",
+      "actions": "Actions"
+    },
+    "filters": {
+      "all": "All",
+      "active": "Active",
+      "inactive": "Inactive",
+      "status": "Status",
+      "article": "Articles",
+      "nomenclature": "Nomenclatures"
+    },
+    "types": {
+      "article": "Article",
+      "nomenclature": "Nomenclature"
+    },
+    "form": {
+      "basic_info": "Basic Information",
+      "classification": "Classification",
+      "pricing": "Pricing",
+      "stock_section": "Stock & Inventory",
+      "bom_section": "Bill of Materials (BOM)",
+      "bom_placeholder": "Product components...",
+      "add_component": "Add Component",
+      "select_article": "Select Article",
+      "search_articles_hint": "Search by code or name...",
+      "no_articles_found": "No articles found",
+      "quantity": "Quantity",
+      "invalid_quantity": "Quantity must be a positive number",
+      "code": "Code",
+      "code_hint": "Unique article code",
+      "name": "Name",
+      "name_hint": "Descriptive name",
+      "description": "Description",
+      "description_hint": "Detailed description",
+      "type": "Product Type",
+      "unit": "Unit of Measure",
+      "family_type": "Family",
+      "matter": "Material/Matter",
+      "cost_price": "Cost Price",
+      "sale_price": "Sale Price",
+      "stock_quantity": "Stock Quantity",
+      "min_stock": "Minimum Stock",
+      "max_stock": "Maximum Stock",
+      "is_active": "Active Product"
+    },
+    "messages": {
+      "created": "Article '{name}' created successfully",
+      "updated": "Article '{name}' updated successfully",
+      "deleted": "Article deleted successfully",
+      "confirm_delete": "Are you sure you want to delete this article?",
+      "confirm_delete_message": "This action cannot be undone"
+    }
+  },
+  "nomenclatures": {
+    "title": "Nomenclatures",
+    "description": "Nomenclature management (BOM)",
+    "list_title": "Nomenclature List",
+    "create": "Create Nomenclature",
+    "create_new": "New Nomenclature",
+    "create_title": "Create Nomenclature",
+    "edit": "Edit Nomenclature",
+    "edit_title": "Edit Nomenclature",
+    "delete": "Delete Nomenclature",
+    "view": "View Nomenclature",
+    "detail": "Nomenclature Details",
+    "no_nomenclatures": "No nomenclatures registered",
+    "no_nomenclatures_message": "Start by creating your first nomenclature",
+    "create_first": "Create First Nomenclature",
+    "search_placeholder": "Search nomenclatures by code, name...",
+    "bom": "Bill of Materials (BOM)",
+    "add_component": "Add Component",
+    "columns": {
+      "id": "ID",
+      "code": "Code",
+      "name": "Name",
+      "unit": "Unit",
+      "components": "Components",
+      "quantity": "Quantity",
+      "unit_cost": "Unit Cost",
+      "total_cost": "Total Cost",
+      "cost": "Cost",
+      "status": "Status",
+      "created_at": "Created At",
+      "actions": "Actions"
+    },
+    "no_components": "No components in this nomenclature",
+    "filters": {
+      "all": "All",
+      "active": "Active",
+      "inactive": "Inactive",
+      "status": "Status",
+      "article": "Articles",
+      "nomenclature": "Nomenclatures"
+    },
+    "form": {
+      "basic_info": "Basic Information",
+      "classification": "Classification",
+      "pricing": "Pricing",
+      "stock_section": "Stock & Inventory",
+      "bom_section": "Bill of Materials (BOM)",
+      "bom_placeholder": "Nomenclature components...",
+      "add_component": "Add Component",
+      "select_article": "Select Article",
+      "search_articles_hint": "Search by code or name...",
+      "no_articles_found": "No articles found",
+      "quantity": "Quantity",
+      "invalid_quantity": "Quantity must be a positive number",
+      "code": "Code",
+      "code_hint": "Unique nomenclature code",
+      "name": "Name",
+      "name_hint": "Descriptive name",
+      "description": "Description",
+      "description_hint": "Detailed description",
+      "type": "Product Type",
+      "unit": "Unit of Measure",
+      "family_type": "Family",
+      "matter": "Material/Matter",
+      "cost_price": "Cost Price",
+      "sale_price": "Sale Price",
+      "stock_quantity": "Stock Quantity",
+      "min_stock": "Minimum Stock",
+      "max_stock": "Maximum Stock",
+      "is_active": "Active Nomenclature"
+    },
+    "messages": {
+      "created": "Nomenclature '{name}' created successfully",
+      "updated": "Nomenclature '{name}' updated successfully",
+      "deleted": "Nomenclature deleted successfully",
+      "confirm_delete": "Are you sure you want to delete this nomenclature?",
+      "confirm_delete_message": "This action cannot be undone"
+    }
+  },
+  "product_detail": {
+    "revision": "Revision",
+    "purchase_price": "Purchase Price",
+    "sale_price_eur": "Sale Price EUR",
+    "margin_percentage": "Margin %",
+    "stock_location": "Location",
+    "total_cost": "Total Cost"
   },
   "products": {
     "title": "Products",
@@ -224,7 +469,11 @@
     "view": "View",
     "create": "Create",
     "search": "Search",
+    "clear": "Clear",
+    "search_history": "Search History",
     "filter": "Filter",
+    "filters": "Filters",
+    "collapse": "Collapse",
     "clear_filters": "Clear Filters",
     "apply_filters": "Apply Filters",
     "export": "Export",
@@ -282,6 +531,8 @@
     "companies": "Companies",
     "clients": "Clients",
     "suppliers": "Suppliers",
+    "articles": "Articles",
+    "nomenclatures": "Nomenclatures",
     "products": "Products",
     "quotes": "Quotes",
     "orders": "Orders",
