--- a/src/frontend/i18n/locales/fr.json
+++ b/src/frontend/i18n/locales/fr.json
@@ -83,7 +83,88 @@
       "website_hint": "https://entreprise.com",
       "company_type": "Type d'Entreprise",
       "country": "Pays",
-      "is_active": "Actif"
+      "is_active": "Actif",
+      "loading": "Chargement du formulaire...",
+      "saving": "Enregistrement...",
+      "error_loading": "Erreur lors du chargement des données: {error}",
+      "edit_title": "Modifier Entreprise",
+      "create_title": "Créer Entreprise",
+      "location": "Emplacement",
+      "updated_success": "Entreprise '{name}' mise à jour avec succès",
+      "created_success": "Entreprise '{name}' créée avec succès"
+    },
+    "detail": {
+      "legal_name": "Nom Légal",
+      "trigram": "Trigramme",
+      "status": "Statut",
+      "phone": "Téléphone",
+      "website": "Site Web",
+      "country": "Pays",
+      "city": "Ville",
+      "main_address": "Adresse Principale",
+      "intracommunity_number": "Numéro Intracommunautaire"
+    },
+    "status": {
+      "active": "Active",
+      "inactive": "Inactive"
+    },
+    "address": {
+      "add": "Ajouter Adresse",
+      "edit": "Modifier Adresse",
+      "required_fields": "Veuillez compléter les champs obligatoires"
+    },
+    "contact": {
+      "add": "Ajouter Contact",
+      "edit": "Modifier Contact",
+      "first_name": "Prénom",
+      "last_name": "Nom",
+      "phone": "Téléphone",
+      "mobile": "Mobile",
+      "position": "Poste",
+      "required_fields": "Veuillez compléter les champs obligatoires"
+    },
+    "messages": {
+      "unknown_error": "Erreur inconnue",
+      "loading": "Chargement de l'entreprise...",
+      "error_loading": "Erreur lors du chargement de l'entreprise: {error}",
+      "delete_title": "Supprimer l'Entreprise",
+      "delete_confirm": "Êtes-vous sûr de vouloir supprimer l'entreprise '{name}'?",
+      "address_deleted": "Adresse supprimée avec succès",
+      "contact_deleted": "Contact supprimé avec succès"
+    },
+    "address_types": {
+      "delivery": "Livraison",
+      "billing": "Facturation",
+      "headquarters": "Siège Social",
+      "branch": "Branche"
+    },
+    "sections": {
+      "general_info": "Informations Générales",
+      "contact_info": "Informations de Contact",
+      "location": "Emplacement",
+      "fiscal_info": "Informations Fiscales",
+      "addresses": "Adresses",
+      "contacts": "Contacts"
+    },
+    "actions": {
+      "edit_company": "Modifier l'entreprise",
+      "delete_company": "Supprimer l'entreprise",
+      "edit_address": "Modifier l'adresse",
+      "delete_address": "Supprimer l'adresse",
+      "edit_contact": "Modifier le contact",
+      "delete_contact": "Supprimer le contact",
+      "add_first_address": "Ajouter Première Adresse",
+      "add_first_contact": "Ajouter Premier Contact"
+    },
+    "empty_states": {
+      "no_addresses": "Aucune adresse enregistrée",
+      "no_contacts": "Aucun contact enregistré"
+    },
+    "labels": {
+      "address": "Adresse",
+      "postal_code": "Code Postal",
+      "main_address": "Adresse principale",
+      "primary": "Principale"
     }
   },
   "clients": {
@@ -115,6 +196,170 @@
     "no_suppliers_message": "Commencez par créer votre premier fournisseur",
     "create_first": "Créer Premier Fournisseur",
     "search_placeholder": "Rechercher fournisseurs par nom, trigramme..."
+  },
+  "articles": {
+    "title": "Articles",
+    "description": "Gestion des articles",
+    "list_title": "Liste des Articles",
+    "create": "Créer Article",
+    "create_new": "Nouvel Article",
+    "create_title": "Créer Article",
+    "edit": "Modifier Article",
+    "edit_title": "Modifier Article",
+    "delete": "Supprimer Article",
+    "view": "Voir Article",
+    "detail": "Détails de l'Article",
+    "no_articles": "Aucun article enregistré",
+    "no_articles_message": "Commencez par créer votre premier article",
+    "create_first": "Créer Premier Article",
+    "search_placeholder": "Rechercher articles par code, nom...",
+    "columns": {
+      "id": "ID",
+      "code": "Code",
+      "name": "Nom",
+      "unit": "Unité",
+      "cost": "Coût",
+      "description": "Description",
+      "status": "Statut",
+      "created_at": "Date de Création",
+      "actions": "Actions"
+    },
+    "filters": {
+      "all": "Tous",
+      "active": "Actifs",
+      "inactive": "Inactifs",
+      "status": "Statut",
+      "article": "Articles",
+      "nomenclature": "Nomenclatures"
+    },
+    "types": {
+      "article": "Article",
+      "nomenclature": "Nomenclature"
+    },
+    "form": {
+      "basic_info": "Informations de Base",
+      "classification": "Classification",
+      "pricing": "Tarification",
+      "stock_section": "Stock et Inventaire",
+      "bom_section": "Nomenclature (BOM)",
+      "bom_placeholder": "Composants du produit...",
+      "add_component": "Ajouter Composant",
+      "select_article": "Sélectionner Article",
+      "search_articles_hint": "Rechercher par code ou nom...",
+      "no_articles_found": "Aucun article trouvé",
+      "quantity": "Quantité",
+      "invalid_quantity": "La quantité doit être un nombre positif",
+      "code": "Code",
+      "code_hint": "Code unique de l'article",
+      "name": "Nom",
+      "name_hint": "Nom descriptif",
+      "description": "Description",
+      "description_hint": "Description détaillée",
+      "type": "Type de Produit",
+      "unit": "Unité de Mesure",
+      "family_type": "Famille",
+      "matter": "Matière",
+      "cost_price": "Prix de Revient",
+      "sale_price": "Prix de Vente",
+      "stock_quantity": "Quantité en Stock",
+      "min_stock": "Stock Minimum",
+      "max_stock": "Stock Maximum",
+      "is_active": "Produit Actif"
+    },
+    "messages": {
+      "created": "Article '{name}' créé avec succès",
+      "updated": "Article '{name}' mis à jour avec succès",
+      "deleted": "Article supprimé avec succès",
+      "confirm_delete": "Êtes-vous sûr de vouloir supprimer cet article?",
+      "confirm_delete_message": "Cette action ne peut pas être annulée"
+    }
+  },
+  "nomenclatures": {
+    "title": "Nomenclatures",
+    "description": "Gestion des nomenclatures (BOM)",
+    "list_title": "Liste des Nomenclatures",
+    "create": "Créer Nomenclature",
+    "create_new": "Nouvelle Nomenclature",
+    "create_title": "Créer Nomenclature",
+    "edit": "Modifier Nomenclature",
+    "edit_title": "Modifier Nomenclature",
+    "delete": "Supprimer Nomenclature",
+    "view": "Voir Nomenclature",
+    "detail": "Détails de la Nomenclature",
+    "no_nomenclatures": "Aucune nomenclature enregistrée",
+    "no_nomenclatures_message": "Commencez par créer votre première nomenclature",
+    "create_first": "Créer Première Nomenclature",
+    "search_placeholder": "Rechercher nomenclatures par code, nom...",
+    "bom": "Nomenclature (BOM)",
+    "add_component": "Ajouter Composant",
+    "columns": {
+      "id": "ID",
+      "code": "Code",
+      "name": "Nom",
+      "unit": "Unité",
+      "components": "Composants",
+      "quantity": "Quantité",
+      "unit_cost": "Coût Unit.",
+      "total_cost": "Coût Total",
+      "cost": "Coût",
+      "status": "Statut",
+      "created_at": "Date de Création",
+      "actions": "Actions"
+    },
+    "no_components": "Aucun composant dans cette nomenclature",
+    "filters": {
+      "all": "Toutes",
+      "active": "Actives",
+      "inactive": "Inactives",
+      "status": "Statut",
+      "article": "Articles",
+      "nomenclature": "Nomenclatures"
+    },
+    "form": {
+      "basic_info": "Informations de Base",
+      "classification": "Classification",
+      "pricing": "Tarification",
+      "stock_section": "Stock et Inventaire",
+      "bom_section": "Nomenclature (BOM)",
+      "bom_placeholder": "Composants de la nomenclature...",
+      "add_component": "Ajouter Composant",
+      "select_article": "Sélectionner Article",
+      "search_articles_hint": "Rechercher par code ou nom...",
+      "no_articles_found": "Aucun article trouvé",
+      "quantity": "Quantité",
+      "invalid_quantity": "La quantité doit être un nombre positif",
+      "code": "Code",
+      "code_hint": "Code unique de la nomenclature",
+      "name": "Nom",
+      "name_hint": "Nom descriptif",
+      "description": "Description",
+      "description_hint": "Description détaillée",
+      "type": "Type de Produit",
+      "unit": "Unité de Mesure",
+      "family_type": "Famille",
+      "matter": "Matière",
+      "cost_price": "Prix de Revient",
+      "sale_price": "Prix de Vente",
+      "stock_quantity": "Quantité en Stock",
+      "min_stock": "Stock Minimum",
+      "max_stock": "Stock Maximum",
+      "is_active": "Nomenclature Active"
+    },
+    "messages": {
+      "created": "Nomenclature '{name}' créée avec succès",
+      "updated": "Nomenclature '{name}' mise à jour avec succès",
+      "deleted": "Nomenclature supprimée avec succès",
+      "confirm_delete": "Êtes-vous sûr de vouloir supprimer cette nomenclature?",
+      "confirm_delete_message": "Cette action ne peut pas être annulée"
+    }
+  },
+  "product_detail": {
+    "revision": "Révision",
+    "purchase_price": "Prix d'Achat",
+    "sale_price_eur": "Prix de Vente EUR",
+    "margin_percentage": "Marge %",
+    "stock_location": "Emplacement",
+    "total_cost": "Coût Total"
   },
   "products": {
     "title": "Produits",
@@ -224,7 +469,11 @@
     "view": "Voir",
     "create": "Créer",
     "search": "Rechercher",
+    "clear": "Effacer",
+    "search_history": "Historique de recherche",
     "filter": "Filtrer",
+    "filters": "Filtres",
+    "collapse": "Réduire",
     "clear_filters": "Effacer Filtres",
     "apply_filters": "Appliquer Filtres",
     "export": "Exporter",
@@ -282,6 +531,8 @@
     "companies": "Entreprises",
     "clients": "Clients",
     "suppliers": "Fournisseurs",
+    "articles": "Articles",
+    "nomenclatures": "Nomenclatures",
     "products": "Produits",
     "quotes": "Devis",
     "orders": "Commandes",
