``` feat(i18n): add specific translation keys for client and supplier form titles
Add edit_client, edit_supplier, create_client, and create_supplier translation keys to company form section in all locales (en, es, fr) to support more specific form titles based on company type.
```

--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -88,7 +88,11 @@
       "saving": "Saving...",
       "error_loading": "Error loading form data: {error}",
       "edit_title": "Edit Company",
+      "edit_client": "Edit Client",
+      "edit_supplier": "Edit Supplier",
       "create_title": "Create Company",
+      "create_client": "Create Client",
+      "create_supplier": "Create Supplier",
       "location": "Location",
       "updated_success": "Company '{name}' updated successfully",
       "created_success": "Company '{name}' created successfully"
